# env_parser

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: assert_test.rs  assert_test_lazy.rs  lib.rs  to_lazy_static.rs
