[package]
name = "env_parser"
version = "0.1.6"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"
description = "Env parser. Parse your env file and create a Rust file with mapped properties"
readme = "README.md"
keywords = ["env", "parser"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jasperav/env_parser"

[dev-dependencies]
indoc = "1.0"

[features]
to_lazy_static = []